--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
             </div>
             <p id="my_name">Itish kumar pati</p>
             <div class="socialmedia_icons">
-                <div class="github mouseclick"><a href="#" class="social_icons giticon" target="_blank"><i class="fa-brands fa-github media_icons"></i></a></div>
-                <div class="linedin mouseclick"><a href="" class="social_icons linked" target="_blank"><i class="fa-brands fa-linkedin media_icons"></i></a></div>
-                <div class="instafram mouseclick"><a href="" class="social_icons instagram" target="_blank"><i class="fa-brands fa-instagram media_icons"></i></a></div>
+                <div class="github mouseclick"><a href="https://github.com/IPCODE77" class="social_icons giticon" target="_blank"><i class="fa-brands fa-github media_icons"></i></a></div>
+                <div class="linedin mouseclick"><a href="https://www.linkedin.com/in/itish-pati-5b065622b/" class="social_icons linked" target="_blank"><i class="fa-brands fa-linkedin media_icons"></i></a></div>
+                <div class="instafram mouseclick"><a href="https://www.instagram.com/itishkumarpati/" class="social_icons instagram" target="_blank"><i class="fa-brands fa-instagram media_icons"></i></a></div>
         <div class="mobile mouseclick" ><a href="tel:7735313216" class="social_icons" ><i class="fa-solid fa-mobile media_icons"></i></i></a></div>
         <div class="whatsapp mouseclick" ><a href="https://wa.me/917735313216" class="social_icons whtsap" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></div>
       
@@ -253,8 +253,8 @@
                       <h5 class="card-title">Portfolio</h5>
                       <p class="card-text">In This website I am using Html Css Javascript jquery etc.</p>
                        <div class="try_it_links">
-                            <button class="try_it_btn">Try It</button>
-                            <button class="try_it_btn"><i class="fa-brands fa-github media_icons"></i></button>
+                             <a href="https://github.com/IPCODE77/Portfolio" target="_blank"><button class="try_it_btn">Try It</button></a>
+                       <a href="https://ipcode77.github.io/Portfolio/portfolio.html" target="_blank"><button class="try_it_btn"><i class="fa-brands fa-github media_icons"></i></button></a>
                        </div>     
 
                     </div>
