--- a/portfolio.html
+++ b/portfolio.html
@@ -105,9 +105,11 @@
                         </a>
 
                         <button class="pushable" id="hire_me">
-                            <span class="front" id="hire_me_span">
-                                Hire me
-                            </span>
+                            <a href="#contact_page" id="hire_me_span" style="color:white; text-decoration: none;">
+                                <span class="front" >
+                                    Hire me
+                                </span>
+                            </a>
                         </button>
                     </div>
                 </div>
